--- a/config/corne.conf
+++ b/config/corne.conf
@@ -4,3 +4,8 @@
 
 # Uncomment the following line to enable the Corne OLED Display
 # CONFIG_ZMK_DISPLAY=y
+
+# Configure sleep options
+CONFIG_ZMK_SLEEP=y
+CONFIG_ZMK_IDLE_TIMEOUT=8000
+CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=300000
