--- a/config/west.yml
+++ b/config/west.yml
@@ -1,10 +1,13 @@
 manifest:
   remotes:
-    - name: petejohanson
-      url-base: https://github.com/petejohanson
+    - name: zmkfirmware
+      url-base: https://github.com/zmkfirmware
+    - name: packorf
+      url-base: https://github.com/packorf
+    - name: 
   projects:
     - name: zmk
-      remote: petejohanson
+      remote: packorf
       revision: features/soft-off-take-2
       import: app/west.yml
   self:
